# arch-graphenium-manager

./: PKGBUILD  README.md  main.py  packages.json  pyproject.toml
backend/: runner.py  system.py
data/: graphenium.desktop
