[project]
name = "graphenium-manager"
version = "0.1.0"
description = "Post-install GUI setup for Arch Linux"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Abdulabu", email = "sodex.programing@gmail.com"}]
requires-python = ">=3.11"
dependencies = ["PySide6>=6.6.0"]

[project.scripts]
graphenium-manager = "graphenium.main:main"

[tool.setuptools]
packages = ["graphenium", "graphenium.backend"]
include-package-data = true

[tool.setuptools.package-data]
graphenium = ["packages.json"]